--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -22,6 +22,10 @@ textarea {
   margin-bottom: 10px;
 }
 
+.btn-color{
+  background-color: #4B0082;
+  border-color: #FFF;
+}
 
 /* typography */
 
