--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,8 +5,8 @@
     <h2>Here you can enjoy synchronous videos with others!</h2>
     
     <div class= "btn-group-vertical">
-      <%= link_to "Sign up now!", signup_path, class: "btn btn-primary btn-lg btn-block" %>
-      <%= link_to "Login now!", "#", class: "btn btn-primary btn-lg btn-block" %>
+      <%= link_to "Sign up now!", signup_path, class: "btn btn-primary btn-lg btn-block btn-color" %>
+      <%= link_to "Login now!", "#", class: "btn btn-primary btn-lg btn-block btn-color" %>
     </div>
 </div>
 
