--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,7 +16,7 @@
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation %>
 
-      <%= f.submit "Ready to watch!", class: "btn btn-primary" %>
+      <%= f.submit "Ready to watch!", class: "btn btn-primary btn-lg btn-color" %>
     <% end %>
   </div>
 </div>
