--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
     
     <div class= "btn-group-vertical">
       <%= link_to "Sign up now!", signup_path, class: "btn btn-primary btn-lg btn-block btn-color" %>
-      <%= link_to "Login now!", "#", class: "btn btn-primary btn-lg btn-block btn-color" %>
+      <%= link_to "Login now!", login_path, class: "btn btn-primary btn-lg btn-block btn-color" %>
     </div>
 </div>
 
