--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,7 +15,7 @@
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.submit "Ready to watch!", class: "btn btn-primary btn-lg btn-color" %>
+      <%= f.submit "Create Account", class: "btn btn-primary btn-lg btn-color" %>
     <% end %>
   </div>
 </div>
