add stylesheet of video_room

--- a/app/views/static_pages/video_room.html.erb
+++ b/app/views/static_pages/video_room.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse">
+<!-- <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse">           
@@ -16,4 +16,14 @@
     <h4 style="color:grey;">host:<%= @room.host_id%></h4>
     <hr>
     <iframe width="1176" height="662" src=<%= @room.link_1 %> frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-  </div>
+  </div> -->
+
+<video id="videoarea" controls="controls" poster="" src=""></video>
+
+<ul id="playlist">
+    <li movieurl="http://html5videoformatconverter.com/data/images/happyfit2.mp4" moviesposter="http://html5videoformatconverter.com/data/images/screen.jpg">Happy Fit</li>
+    <li movieurl="http://grochtdreis.de/fuer-jsfiddle/video/sintel_trailer-480.mp4">Sintel</li>          
+    <li movieurl="http://html5example.net/static/video/html5_Video_VP8.webm">Resident Evil</li>      
+    <li movieurl="http://www.ioncannon.net/examples/vp8-webm/big_buck_bunny_480p.webm">Big Buck Bunny</li>
+</ul>
+
