--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,20 +17,37 @@
             <ul class="nav navbar-nav navbar-right">
               <li><%= link_to "Home",    root_path %></li>
               <% if logged_in? %>
-                <li><%= link_to "My Room", new_room_path %></li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    Account <b class="caret"></b>
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><%= link_to "Profile", current_user %></li>
-                    <li><%= link_to "Settings", '#' %></li>
-                    <li class="divider"></li>
-                    <li>
-                      <%= link_to "Log out", logout_path, method: :delete %>
-                    </li>
-                  </ul>
-                </li>
+                <% if current_user.room_id != nil %>
+                  <li><%= link_to "My Room", video_room_path(current_user.room_id) %></li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                      Account <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><%= link_to "Profile", current_user %></li>
+                      <li><%= link_to "Settings", '#' %></li>
+                      <li class="divider"></li>
+                      <li>
+                        <%= link_to "Log out", logout_path, method: :delete %>
+                      </li>
+                    </ul>
+                  </li>
+                <% else %>
+                  <li><%= link_to "My Room", new_room_path %></li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                      Account <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><%= link_to "Profile", current_user %></li>
+                      <li><%= link_to "Settings", '#' %></li>
+                      <li class="divider"></li>
+                      <li>
+                        <%= link_to "Log out", logout_path, method: :delete %>
+                      </li>
+                    </ul>
+                  </li>
+                <% end %>  
               <% else %>
                 <li><%= link_to "Log in", login_path %></li>
               <% end %>              
