--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,21 @@
 <% provide(:title, "Sync Room") %>
-<div class= "center jumbotron">
-  <h1>Welcome to the Sync Room!</h1>
+<% if !logged_in? %>
+  <div class= "center jumbotron">
+    <h1>Welcome to the Sync Room!</h1>
   
-    <h2>Here you can enjoy synchronous videos with others!</h2>
+      <h2>Here you can enjoy synchronous videos with others!</h2>
     
-    <div class= "btn-group-vertical">
-      <%= link_to "Sign up now!", signup_path, class: "btn btn-primary btn-lg btn-block btn-color" %>
-      <%= link_to "Login now!", login_path, class: "btn btn-primary btn-lg btn-block btn-color" %>
-    </div>
-</div>
+      <div class= "btn-group-vertical">
+        <%= link_to "Sign up now!", signup_path, class: "btn btn-primary btn-lg btn-block btn-color" %>
+        <%= link_to "Login now!", login_path, class: "btn btn-primary btn-lg btn-block btn-color" %>
+      </div>
+  </div>
+<% else %>
+  <div class= "center jumbotron">
+    <h1>Welcome to the Sync Room!</h1>
+    
+      <h2>Here you can enjoy synchronous videos with others!</h2>
+    
+  </div>
+<% end %>
 
