--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, "Sync Room | My Profile") %>
   <h1>
+    <img src=<%= @user.avatar %> width="200" height="200"/>
     <p>My User name is <%= @user.username %></p>
     <p>My Room ID is <%= @user.room_id ||= 0 %></p>
     <p>My ID is <%= @user.id ||= 0 %></p>
