successfully switch to pg

--- a/app/views/static_pages/video_room.html.erb
+++ b/app/views/static_pages/video_room.html.erb
@@ -54,7 +54,7 @@
         </div>
     </div>
 
-    <div class="vid-item" onClick="document.getElementById('vid_frame').src= 'https://www.youtube.com/embed/JqAhrVb9rIw'" %>>
+    <div class="vid-item" onClick="document.getElementById('vid_frame').src= 'https://www.youtube.com/embed/JqAhrVb9rIw'" >
         <div class="thumb">
             <img src="http://img.youtube.com/vi/JqAhrVb9rIw/0.jpg" alt="" />
             <!-- <img src="http://img.youtube.com/vi/Z8FP75ADfmI/0.jpg" alt="" /> -->
@@ -64,7 +64,7 @@
         </div>
     </div>
 
-    <div class="vid-item" onClick="document.getElementById('vid_frame').src= 'https://www.youtube.com/embed/h1NRrWntlxE'" %>>
+    <div class="vid-item" onClick="document.getElementById('vid_frame').src= 'https://www.youtube.com/embed/h1NRrWntlxE'" >
         <div class="thumb">
             <img src="http://img.youtube.com/vi/h1NRrWntlxE/0.jpg" alt="" />
             <!-- <img src="http://img.youtube.com/vi/AXvLWENEYN0/0.jpg" alt="" /> -->
