--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,9 @@
                       Account <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
+                      <li><%= link_to "Join Room", edit_user_path(current_user, "join") %></li>
                       <li><%= link_to "Profile", current_user %></li>
-                      <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+                      <li><%= link_to "Settings", edit_user_path(current_user, "user") %></li>
                       <li class="divider"></li>
                       <li>
                         <%= link_to "Log out", logout_path, method: :delete %>
@@ -34,6 +35,18 @@
                   </li>
                 <% else %>
                   <li><%= link_to "My Room", new_room_path %></li>
+                  
+                  <li>
+                    <%= form_tag(join_user_path(current_user), :method => "post", class: 'navbar-form navbar-left') do %>  
+                      <div class="input-group">  
+                        <%= search_field_tag :search, params[:search], placeholder: "Join a Room with ID", class: "form-control" %>  
+                        <div class="input-group-btn">  
+                          <%= button_tag "", :class => 'btn btn-info glyphicon glyphicon-search',:name => nil%>  
+                        </div>  
+                      </div>  
+                    <% end %>
+                  </li>
+                  
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                       Account <b class="caret"></b>
@@ -52,16 +65,6 @@
                 <li><%= link_to "Log in", login_path %></li>
               <% end %>              
             </ul>
-            <form class="navbar-form navbar-right ">
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="Find a room">
-                <div class="input-group-btn">
-                  <button class="btn btn-default" type="submit">
-                    <i class="glyphicon glyphicon-search"></i>
-                  </button>
-                </div>
-              </div>
-            </form>
           </nav>
       </div>
     </header>
