--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, "Sync Room | My Profile") %>
+
 <div class="container">
 	<img src=<%= @user.avatar %> />
 	<%= form_for @user, :html => {:class => "form-horizontal"} do |f| %>
@@ -27,14 +28,14 @@
 		<div class="form-group">
 			<label class="col-sm-2 control-label">Changed Password</label>
 			<div class="col-sm-4">
-				<input type="password" name="password1" class="form-control" placeholder="No required if you don't chagne password">
+				<input type="password" name="password1" class="form-control" placeholder="No required if you don't change password">
 			</div>
 		</div>
 
 		<div class="form-group">
 			<label class="col-sm-2 control-label">Confirm Password</label>
 			<div class="col-sm-4">
-				<input type="password" name="password2" class="form-control" placeholder="No required if you don't chagne password">
+				<input type="password" name="password2" class="form-control" placeholder="No required if you don't change password">
 			</div>
 		</div>
 
