--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
           <nav>
             <ul class="nav navbar-nav navbar-right">
               <li><%= link_to "Home",    root_path %></li>
+              <li><%= link_to "Lobby",    lobby_path %></li>
               <% if logged_in? %>
                 <% if current_user.room_id != nil %>
                   <li><%= link_to "My Room", video_room_path(current_user.room_id) %></li>
