--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -61,7 +61,7 @@ p {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
-  color: #4B0082;
+  color: rgb(130, 177, 247);
   text-transform: uppercase;
   letter-spacing: -1px;
   padding-top: 9px;
@@ -69,7 +69,7 @@ p {
 }
 
 #logo:hover {
-  color: #4B0082;
+  color: rgb(174, 209, 250);
   text-decoration: none;
 }
 
