--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
   </head>
 
   <body>
-    <header class="navbar navbar-fixed-top navbar-inverse-brand-hover-color">
-      <div class="container">
+    <header class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container-fluid">
         <%= link_to "Sync Room", root_path, id: "logo" %>
           <nav>
             <ul class="nav navbar-nav navbar-right">
@@ -67,7 +67,7 @@
           </nav>
       </div>
     </header>
-    <div class="container">
+    <div class="container-fluid">
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>      
