--- a/app/views/static_pages/lobby.html.erb
+++ b/app/views/static_pages/lobby.html.erb
@@ -6,7 +6,7 @@
         <%= link_to "Oldest", signup_path, class: "btn btn-primary btn-lg btn-block btn-color" %>
     </div>
     
-    <div class="container">
+    <div class="container-fluid">
         <% @all_rooms.each_slice(3) do |array_of_3_items|%>
         <div class="row">
             <% array_of_3_items.each do |room|%>
