--- a/app/views/static_pages/video_room.html.erb
+++ b/app/views/static_pages/video_room.html.erb
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <div data-behavior='room-info' data-room-id='<%= @room.id %>' data-host-id='<%= @room.host_id%>'>
-      <h4>
-        room_name:<%= @room.room_name%>      
-        host:<%= @room.host_id%>
-      </h4>
-    </div> 
     <div id="container">
       <div id="video_contorl">
-        <div id="player"></div>
-        <p>
-        <span >status:</span>
-        <span id="player-status">stopped</span>
-        <span id="current-time"></span>
-        <span > / </span>
-        <span id="duration"></span>
-        </p>
-        <% if current_user.id == @room.host_id %>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <span id="play" class="material-icons">play_arrow</span>
-        <span id="pause" class="material-icons">pause</span>
-        <input type="range" id="progress-bar" value="0">
-        <% end %>
+        <div class="embed-responsive embed-responsive-16by9">
+            <div id="player"></div>
+        </div>
+        <div data-behavior='room-info' data-room-id='<%= @room.id %>' data-host-id='<%= @room.host_id%>'>
+            <div class="alert alert-light" style="margin-bottom:0">    
+                <h4 class="my-text">
+                    <span>[room_name:<%= @room.room_name%>  </span>    
+                    <span>host:<%= @room.host_id %>]  </span>
+                <h4>
+                <h4 id="playback-info" class="my-text">
+                    <span>status:</span>
+                    <span id="player-status">pulsed</span>
+                    <b id="current-time"></b>
+                    <span> / </span>
+                    <b id="duration"></b>
+                </h4>
+                <% if current_user.id == @room.host_id %>
+                <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+                <div class="d-inline">
+                <span id="play" class="material-icons">play_arrow</span>
+                <span id="pause" class="material-icons">pause</span>
+                </div>
+                <input type="range" id="progress-bar" class="d-inline" value="0">
+                <% end %>
+            </div> 
+        </div> 
       </div>
       <div id="message-wr">
         <%= render :template => 'messages/index' %>
@@ -106,8 +112,7 @@ firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 var player;
 function onYouTubeIframeAPIReady() {
   player = new YT.Player('player', {
-    height: '500',
-    width: '800',
+
     videoId: '<%= convert_link(@room.link_1) %>',
     events: {
       'onReady': initialize,
@@ -156,7 +161,7 @@ $('#progress-bar').on('mouseup touchend', function (e) {
   // Calculate the new time for the video.
   // new time in seconds = total duration in seconds * ( value of range input / 100 )
   var newTime = player.getDuration() * (e.target.value / 100);
-
+  App.room.send_message(<%=@room.id%>,"$time$"+newTime);
   // Skip video to new time.
   player.seekTo(newTime);
 });
