fix progress bar and development env

--- a/app/views/static_pages/video_room.html.erb
+++ b/app/views/static_pages/video_room.html.erb
@@ -27,7 +27,7 @@
                             <span id="play" type="button" class="btn btn-secondary">play</span>
                             <span id="pause" type="button" class="btn btn-secondary">pause</span>
                         </div>
-                        <input class="same-line-right" type="range" value="0">
+                        <input id="progress-bar" class="same-line-right" type="range" value="0">
                     </div>
                 <% end %>
             </div> 
