Add pagination to playlist page

--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -26,4 +26,7 @@
 			<% end %>
 		</div>
 	<% end %>
+	<div class="pagination">
+		<%= will_paginate @playlists, renderer: BootstrapPagination::Rails %>
+	</div>
 </div>
