--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -27,4 +27,7 @@
             <% end %>
         </div>
 		<% end %>
+		<div class="pagination">
+			<%= will_paginate @rooms, renderer: BootstrapPagination::Rails %>
+		</div>
 	</div>
