--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -19,8 +19,8 @@
                             <p>Room ID: <%= room.id %></p>
                             <p>Active User: <%= ActiveUser.find_by_room_id(room.id).user_count %></p>
                         </h4>
-                        <!--<img class="img-responsive" src=%=get_thumbnail(room.link_1)%> alt="" />-->
-                        <img class="img-responsive" src="https://getuikit.com/v2/docs/images/placeholder_600x400.svg" alt="" />
+                        <img class="img-responsive" src=<%=get_thumbnail(room.link_1)%> alt="" />
+                        <!--<img class="img-responsive" src="https://getuikit.com/v2/docs/images/placeholder_600x400.svg" alt="" />-->
                     </div>
                 </div>
             </div>
