--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -20,7 +20,7 @@
                             <!--use size method instead-->
                             <p>Active User: <%= room.users.size %></p>
                         </h4>
-                        <img class="img-responsive" src=%=get_thumbnail(room.link_1)%> alt="" />
+                        <img class="img-responsive" src=<%=get_thumbnail(room.link_1)%> alt="" />
                         <!--<img class="img-responsive" src="https://getuikit.com/v2/docs/images/placeholder_600x400.svg" alt="" />-->
                     </div>
                 </div>
