establish connection only after join a room

--- a/app/views/static_pages/video_room.html.erb
+++ b/app/views/static_pages/video_room.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <body>
+  <body data-controller="<%= controller.controller_path %>" data-action="<%= controller.action_name %>">
     <div id="container">
       <div id="video_contorl">
         <div class="embed-responsive embed-responsive-16by9">
